<resources>
    <string name="app_name">JFoot</string>
    <string name="app_no_name"/>

    <!-- Utils String -->
    <string name="default_image_description">JFoot image</string>
    <string name="default_image_title_description">JFoot image title</string>
    <string name="default_image_next_button_description">Next Button</string>
    <string name="match_item_image_description">match item image description</string>
    <string name="error_unknown_error">Une erreur est apparue</string>
    <string name="error_no_internet">internet est requis</string>
    <string name="error_authentication_canceled">L\'authentification à était annulé</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="transition_animation">transition_animation</string>
    <string name="transition_animation_comment">transition_animation_comment</string>
    <string name="reply_been_send">Votre réponse à bien était envoyé</string>
    <!-- Utils String End -->

    <!-- Login String -->
    <string name="connexion_by_mail">Connexion Avec Email</string>
    <string name="connexion_by_google">Connexion Avec Google</string>
    <string name="error_occurred">Désolé une erreur est survenue</string>
    <!-- Login String End -->

    <!-- Top Match array -->
    <string-array name="top_match_query">
        <item>Marseille</item>
        <item>PSG</item>
        <item>Lyon</item>
        <item>AS Monaco</item>
        <item>Liverpool</item>
        <item>Arsenal</item>
        <item>Manchester City</item>
        <item>Manchester United</item>
        <item>Inter Milan</item>
        <item>Milan AC</item>
        <item>Juventus</item>
        <item>Barcelona</item>
        <item>Real Madrid</item>
        <item>Atletico Madrid</item>
        <item>Bayern Munich</item>
        <item>Borussia Dortmund</item>
    </string-array>
    <!-- Top Match array End -->

    <!-- Home String -->
    <string name="top_matchs">Top Matchs</string>
    <string name="matchs">Matchs</string>
    <!-- Home String End -->

    <!-- Matches List String -->
    <string name="nothing_found_message">Désolé aucun match trouvé</string>
    <string name="reply">Réponse</string>
    <!-- Matches List String End -->

    <!-- Matches Item String -->
    <string name="vs">vs</string>
    <!-- Matches Item String End -->

    <!-- Details String -->
    <string name="commentaires">Commentaires</string>
    <string name="your_comment">Votre Commentaire</string>
    <!-- Details String End -->

    <!-- Message String -->
    <string name="mes_notifications">Mes Notifications</string>
    <string name="like_notification">à aimé votre commentaire</string>
    <string name="reply_notification">à répondu à votre commentaire</string>
    <!-- Message String End -->

    <!-- Bottom Nav String -->
    <string name="accueil">Accueil</string>
    <string name="scores">Scores</string>
    <string name="conversation">Conversation</string>
    <string name="add">Ajouter</string>
    <!-- Bottom Nav String End -->

    <!-- Bad Word array -->
    <string-array name="bad_word">
        <item> connard </item>
        <item> conard </item>
        <item> sale pd </item>
        <item> gros pd </item>
        <item> petit pd </item>
        <item> tapette </item>
        <item> enculé </item>
        <item> va te faire </item>
        <item> va te faire foutre </item>
        <item> salaupe </item>
        <item> salope </item>
        <item> salop </item>
        <item> pétasse </item>
        <item> pute </item>
        <item> fils de </item>
    </string-array>
    <!-- Bad Word array End -->

</resources>
