<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/homeFragment2"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/accueil"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/liveFragment"
            android:enabled="true"
            android:icon="@drawable/ic_live"
            android:title="@string/scores"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/messageFragment"
            android:enabled="true"
            android:icon="@drawable/outline_forum"
            android:title="@string/conversation"
            app:showAsAction="ifRoom" />

</menu>