<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_fragment_layout"
        tools:context=".login.LoginActivity"
        android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Loading panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_progress_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/grayTransparent"
                android:elevation="@dimen/progress_layout_elevation">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:id="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Loading panel -->

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_default_card"
                style="@style/CustomTopCardViewStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/default_card_elevation"
                android:layout_marginTop="@dimen/default_card_margin_top"
                app:cardBackgroundColor="@color/colorWhite">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:minHeight="@dimen/default_card_min_height"
                    android:paddingBottom="80dp">

                <ImageView
                        android:id="@+id/home_image"
                        android:transitionName="@string/transition_animation"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/default_top_image_height"
                        app:srcCompat="@drawable/card_image1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/colorTransparent"
                        android:alpha="0.8"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/default_image_description"/>

                <ImageView
                        android:id="@+id/top_match_image"
                        android:src="@drawable/ic_top_match"
                        android:layout_width="@dimen/default_image_title_size"
                        android:layout_height="@dimen/default_image_title_size"
                        app:layout_constraintTop_toBottomOf="@+id/home_image"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/default_image_title_margin_start"
                        android:layout_marginTop="@dimen/default_image_title_margin_top"
                        android:tint="@color/colorGold"
                        android:backgroundTint="@color/colorTransparent"
                        android:contentDescription="@string/default_image_title_description"/>

                <TextView
                        android:id="@+id/top_match_title"
                        android:text="@string/top_matchs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/top_match_image"
                        app:layout_constraintBottom_toBottomOf="@+id/top_match_image"
                        app:layout_constraintStart_toEndOf="@+id/top_match_image"
                        style="@style/TitleDefaultStyle" android:layout_marginTop="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_match_recycler_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@+id/top_match_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/recycler_view_margin_top"
                        tools:listitem="@layout/match_item"/>

                <ImageView
                        android:id="@+id/ball_image_view"
                        android:src="@drawable/ic_ball"
                        android:tint="@color/colorGold"
                        android:layout_width="@dimen/ball_image_view_size"
                        android:layout_height="@dimen/ball_image_view_size"
                        app:layout_constraintTop_toBottomOf="@+id/top_match_recycler_view"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/ball_image_view_margin_top"
                        android:layout_marginStart="@dimen/ball_image_view_margin_start"
                        android:contentDescription="@string/default_image_title_description"/>

                <TextView
                        android:id="@+id/other_match_title"
                        android:text="@string/matchs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/ball_image_view"
                        app:layout_constraintBottom_toBottomOf="@+id/ball_image_view"
                        app:layout_constraintStart_toEndOf="@+id/ball_image_view"
                        style="@style/TitleDefaultStyle" android:layout_marginTop="5dp"/>

                <ImageButton
                        android:id="@+id/top_match_next_button"
                        android:src="@drawable/ic_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/top_match_title"
                        app:layout_constraintBottom_toBottomOf="@+id/top_match_title"
                        android:layout_marginEnd="@dimen/next_button_margin"
                        android:tint="@color/colorGold"
                        android:backgroundTint="@color/colorTransparent"
                        android:contentDescription="@string/default_image_next_button_description"/>

                <ImageButton
                        android:id="@+id/other_match_next_button"
                        android:src="@drawable/ic_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/other_match_title"
                        app:layout_constraintBottom_toBottomOf="@+id/other_match_title"
                        android:layout_marginEnd="@dimen/next_button_margin"
                        android:tint="@color/colorGold"
                        android:backgroundTint="@color/colorTransparent"
                        android:contentDescription="@string/default_image_next_button_description"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/other_match_recycler_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@+id/ball_image_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/recycler_view_margin_top"
                        tools:listitem="@layout/match_item"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>