<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_layout"
        tools:context=".login.LoginActivity"
        android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Loading panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_progress_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/grayTransparent"
                android:elevation="@dimen/progress_layout_elevation">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:id="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Loading panel -->

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_default_card"
                style="@style/CustomTopCardViewStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/default_card_elevation"
                android:layout_marginTop="@dimen/login_card_margin_top"
                app:cardBackgroundColor="@color/colorWhite">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:minHeight="@dimen/default_card_min_height">

                <ImageView
                        android:id="@+id/login_image"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/login_image_height"
                        app:srcCompat="@drawable/card_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:alpha="0.8"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:background="@color/colorWhite"
                        android:contentDescription="@string/default_image_description"/>

                <TextView
                        android:id="@+id/login_title"
                        android:text="@string/app_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/login_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/login_title_horizontal_margin"
                        android:layout_marginEnd="@dimen/login_title_horizontal_margin"
                        android:textSize="@dimen/login_title_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorGray"
                        android:textAlignment="center"
                        android:shadowColor="@color/colorPrimary"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="1"/>

                <Button
                        android:id="@+id/login_button_mail"
                        android:text="@string/connexion_by_mail"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/login_button_height"
                        app:layout_constraintTop_toBottomOf="@+id/login_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/login_button_mail_margin_top"
                        android:layout_marginStart="@dimen/login_button_horizontal_margin"
                        android:layout_marginEnd="@dimen/login_button_horizontal_margin"
                        android:textSize="@dimen/login_button_text_size"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/colorWhite"
                        android:stateListAnimator="@null"
                        app:cornerRadius="@dimen/login_button_radius"
                        android:elevation="@dimen/login_button_elevation" android:textColor="@color/colorGold"/>

                <Button
                        android:id="@+id/login_button_google"
                        android:text="@string/connexion_by_google"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/login_button_height"
                        app:layout_constraintTop_toBottomOf="@+id/login_button_mail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/login_button_google_margin_top"
                        android:layout_marginStart="@dimen/login_button_horizontal_margin"
                        android:layout_marginEnd="@dimen/login_button_horizontal_margin"
                        android:textSize="@dimen/login_button_text_size"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/colorWhite"
                        android:stateListAnimator="@null"
                        app:cornerRadius="@dimen/login_button_radius"
                        android:elevation="@dimen/login_button_elevation" android:textColor="@color/colorGold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>