<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notification_fragment_layout"
        tools:context=".notification.NotificationFragment"
        android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Loading panel -->
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/notification_progress_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/grayTransparent"
                    android:elevation="@dimen/progress_layout_elevation">

                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="@dimen/progress_bar_size"
                        android:layout_height="@dimen/progress_bar_size"
                        android:id="@+id/progressBar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Loading panel -->

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/notification_default_card"
                    style="@style/CustomTopCardViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/default_card_elevation"
                    android:layout_marginTop="@dimen/default_card_margin_top"
                    app:cardBackgroundColor="@color/colorWhite">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:minHeight="@dimen/default_card_min_height"
                            android:paddingBottom="80dp">

                            <ImageView
                                    android:id="@+id/notification_image"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/default_top_image_height"
                                    app:srcCompat="@drawable/card_image"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:background="@color/colorWhite"
                                    android:alpha="0.8"
                                    android:adjustViewBounds="true"
                                    android:contentDescription="@string/default_image_description"/>

                            <ImageView
                                    android:id="@+id/notification_title_image"
                                    android:layout_width="@dimen/ball_image_view_size"
                                    android:layout_height="@dimen/ball_image_view_size"
                                    app:layout_constraintTop_toBottomOf="@+id/notification_image"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:src="@drawable/ic_notifications"
                                    android:tint="@color/colorGold"
                                    android:layout_marginStart="@dimen/default_image_title_margin_start"
                                    android:layout_marginTop="@dimen/default_image_title_margin_top"
                                    android:backgroundTint="@color/colorTransparent"
                                    android:contentDescription="@string/default_image_title_description"/>

                            <TextView
                                    android:id="@+id/notification_title"
                                    android:text="@string/mes_notifications"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toTopOf="@+id/notification_title_image"
                                    app:layout_constraintBottom_toBottomOf="@+id/notification_title_image"
                                    app:layout_constraintStart_toEndOf="@+id/notification_title_image"
                                    style="@style/TitleDefaultStyle"
                                    android:textSize="@dimen/message_title_text_size"/>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/notification__recycler_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:layout_constraintTop_toBottomOf="@+id/notification_title_image"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="@dimen/recycler_view_margin_top"
                                tools:listitem="@layout/notification_item"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>